templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-library-service
  namespace: default
spec:
  selector:
    app: community-library
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
