templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: community-library-ingress
  namespace: default
spec:
  rules:
  - host: community-library.kubernetes.georgialeng.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: community-library-service
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - community-library.kubernetes.georgialeng.com
    secretName: community-library-cert # < cert-manager will store the created certificate in this secret.
